// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test view of toggler Should show a toggler with "false" value 1`] = `
<DocumentFragment>
  <div
    class="toggler"
  >
    <div
      class="toggler-box"
    >
      <div
        class="toggler-box__item "
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test view of toggler Should show a toggler with "true" value 1`] = `
<DocumentFragment>
  <div
    class="toggler"
  >
    <div
      class="toggler-box"
    >
      <div
        class="toggler-box__item toggler-box__item_right"
      />
    </div>
  </div>
</DocumentFragment>
`;
